<resources>
    <string name="app_name">YourAssistant(Yora)</string>
    <string name="app_name_yora">YORA</string>
    <string name="app_logo">YORA Logo</string>
    <string name="tagline">YOUR ASSISTANCE</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="your_personal_assistant_awaits">Your personal assistant awaits</string>
    <string name="welcome_to_yora">Welcome to YORA</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember">Remember</string>
    <string name="google">Google</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="by_signing">By signing up, you agree to our <a href="https://example.com/terms">Terms Of Service</a> and <a href="https://example.com/privacy">Privacy Policy</a></string>
    <string name="create_account">Create Account</string>
    <string name="default_web_client_id">326251058809-u8ajlacumqps2ql5hk33qp0cpru27u8r.apps.googleusercontent.com</string>
    <string name="title_activity_edit_profile_screen">EditProfileScreenActivity</string>
</resources>